[project]
name = "cartpole-multi"
version = "0.1.0"
description = "Configurable multi-pendulum cartpole environment with PufferLib vectorized training."
requires-python = ">=3.10,<3.13"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pillow>=8.3",
    "pufferlib>=2.0",
    "torch>=2.0",
]

[tool.ruff]
line-length = 100
